# dnn_cpp

./: .gitignore  CMakeLists.txt  dnn_cpp.cpp  readme.md
dnn_tests/: activation_test.cpp  layer_test.cpp  loss_test.cpp  model_test.cpp
include/nn/: activation.h  layer.h  loss.h  model.h
include/optim/: sgd.h
src/nn/: activation.cpp  layer.cpp  loss.cpp  model.cpp
